<resources>
    <string name="app_name">Movie catalog</string>
    <string name="movie_catalog">Movie Catalog</string>
    <string name="poster_of_the_movie">poster of the movie</string>
    <string name="preview">Preview</string>
    <string name="original_title">Original title</string>
    <string name="genre">Genre</string>
    <string name="production">Production</string>
    <string name="release_date">Release date</string>
    <string name="revenue">Revenue</string>
    <string name="score">Score</string>
    <string name="overview">Overview</string>
    <string name="search">Search</string>
    <string name="setting">Change language</string>
    <string name="search_hint">Search movie…</string>
    <string name="detail">Detail</string>
    <string name="share">Share</string>
    <string name="detail_movie">Movie detail</string>
    <string name="now_playing">Now playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="share_using">Share using</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="preferences">Preferences</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="like_button">like button</string>
    <string name="favourite_movie">Favourite movies</string>
    <string name="add_movie">No data, please add one movie as your favourite</string>
    <string name="movie_added">Liked</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_sure">Are you sure to cancel?</string>
    <string name="delete_movie">Delete movie</string>
    <string name="delete_movie_sure">Are you sure to delete this movie?</string>
    <string name="appwidget_text">No data</string>
    <string name="add_widget">Add widget</string>
    <string name="now_playing_reminder">Now playing reminder</string>
    <string name="daily_contents">Daily contents</string>
    <string name="channel_id" translatable="false">channel_01</string>
    <string name="channel_name" translatable="false">channel_movie_catalog</string>
    <string name="new_contents">Are you bored? We have many new movies…</string>
    <string name="toast_daily_contents">Daily contents reminder is activated</string>
    <string name="toast_daily_contents_off">Daily contents reminder is deactivated</string>
    <string name="toast_reminder">Now playing reminder is activated</string>
    <string name="toast_reminder_off">Now playing reminder is deactivated</string>
    <string name="is_now_playing"> is now playing</string>
    <string name="movie_title">Movie title: </string>
    <string name="movie_deleted">Unliked</string>
</resources>
