<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/favourite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favourite" />
    </group>

    <item android:title="@string/preferences">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/setting"/>
        </menu>
    </item>
</menu>
