<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:nestedScrollingEnabled="true"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_detail">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/img_poster_detail"
            android:layout_width="150dp"
            android:layout_height="222dp"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/poster_of_the_movie"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/tl_layout_detail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/img_poster_detail"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:shrinkColumns="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_poster_detail">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_weight="0.025"
                    android:text="@string/original_title"
                    style="@style/Text.Detail.Bold"/>

                <TextView
                    android:id="@+id/tv_original_title_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.975"
                    style="@style/Text.Detail" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_weight="0.025"
                    android:text="@string/release_date"
                    style="@style/Text.Detail" />

                <TextView
                    android:id="@+id/tv_release_date_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.975"
                    style="@style/Text.Detail" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_weight="0.025"
                    android:text="@string/score"
                    style="@style/Text.Detail"/>

                <TextView
                    android:id="@+id/tv_score_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.975"
                    style="@style/Text.Detail"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_weight="0.025"
                    android:text="@string/overview"
                    style="@style/Text.Detail" />

                <TextView
                    android:id="@+id/tv_overview_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.975"
                    style="@style/Text.Detail" />
            </TableRow>
        </TableLayout>
    </android.support.constraint.ConstraintLayout>

</ScrollView>

